--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,8 +4,8 @@ backend:
 media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
 public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 collections:
-  - name: "projects" # Used in routes, e.g., /admin/collections/blog
-    label: "Projects" # Used in the UI
+  - name: "projects" # Used in routes, e.g., /content/projects
+    label: "Project" # Used in the UI
     folder: "content/projects" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
@@ -16,4 +16,18 @@ collections:
       - {label: "Published", name: "published", widget: "boolean", default: true}
       - {label: "Cover Image", name: "cover_image", widget: "image", required: false}
       - {label: "Description", name: "description", widget: "markdown"}
+      - {label: "Body", name: "body", widget: "markdown"}
+  - name: "sectors" # Used in routes, e.g., /content/sectors
+    label: "Sector" # Used in the UI
+    folder: "content/sectors" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    extension: 'md'
+    fields: # The fields for each document, usually in front matter
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Date", name: "date", widget: "datetime"}
+      - {label: "Published", name: "published", widget: "boolean", default: true}
+      - {label: "Cover Image", name: "cover_image", widget: "image", required: false}
+      - {label: "Description", name: "description", widget: "markdown"}
+      - {label: "Benefits list", name: "benefits_list", widget: "object", fields: [{label: "Heading", name: "heading", default: "BENEFITS AT A GLANCE", widget: "string"}, {label: "Subheading", name: "subheading", widget: "text"}, {label: "Benefit", name: "benefit", widget: "list", fields: [{label: "Heading", name: "heading", widget: "text"}, {label: "Text", name: "text", widget: "text"}]}]}
       - {label: "Body", name: "body", widget: "markdown"}
