--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -24,8 +24,7 @@ collections:
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     extension: 'md'
     fields: # The fields for each document, usually in front matter
-      - {label: "Sector", name: "title", widget: "string"}
-      - {label: "Heading", name: "heading", widget: "string"}
+      - {label: "Title", name: "title", widget: "string"}
       - {label: "Date", name: "date", widget: "datetime"}
       - {label: "Published", name: "published", widget: "boolean", default: true}
       - {label: "Cover Image", name: "cover_image", widget: "image", required: false}
