--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "gridsome": "^0.7.0",
     "gridsome-plugin-netlify-cms": "^1.0.9",
     "netlify-cms": "^2.9.7",
-    "tailwindcss": "^1.1.3"
+    "tailwindcss": "^1.1.3",
+    "vue-typer": "^1.2.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0"
