--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -32,3 +32,15 @@ collections:
       - {label: "Description", name: "description", widget: "markdown"}
       - {label: "Benefits list", name: "benefits_list", widget: "object", fields: [{label: "Heading", name: "heading", default: "BENEFITS AT A GLANCE", widget: "string"}, {label: "Subheading", name: "subheading", widget: "text"}, {label: "Benefit", name: "benefit", widget: "list", fields: [{label: "Heading", name: "heading", widget: "text"}, {label: "Text", name: "text", widget: "text"}]}]}
       - {label: "Body", name: "body", widget: "markdown"}
+  - name: "about" # Used in routes, e.g., /content/sectors
+    label: "About" # Used in the UI
+    folder: "content/" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    extension: 'md'
+    fields: # The fields for each document, usually in front matter
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Date", name: "date", widget: "datetime"}
+      - {label: "Published", name: "published", widget: "boolean", default: true}
+      - {label: "Cover Image", name: "cover_image", widget: "image", required: false}
+      - {label: "Body", name: "body", widget: "markdown"}
