Home page update config

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -101,7 +101,7 @@ collections:
   - name: "home"
     label: "Home page"
     folder: "content/home"
-    create: true # Allow users to create new documents in this collection
+    create: false # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     extension: "md"
     fields: # The fields for each document, usually in front matter
