--- a/src/data/home.yaml
+++ b/src/data/home.yaml
@@ -29,6 +29,12 @@ section_solar:
   subheading: >-
     Farming, Business parks, University, Colleges, Schools, Hospitals and
     more...
+  body: >- 
+    With a decent roof or plot of land and a long-term intention to stay SOLAR makes good sense. Ideally the you should own the freehold of your premises, or have a long-lease over the property.
+
+    The lifetime cost per kWh of solar electricity is now 5.5p per kWh... this compares to 10-12p for electricity purchased from the grid.
+
+    In the right business, the system will more than pay for itself, should be financable if necessary and will significantly improve your company’s impact on the environment.
 section_how:
   body: >-
     Considered a promising energy source for decades, solar panels can be found
