--- a/src/data/home.yml
+++ b/src/data/home.yml
@@ -1,6 +1,8 @@
 title: Home
 date: 2020-01-10T10:50:24.504Z
 section_banner:
+  alt: Sun rising over a solar installation.
+  banner_image: /images/uploads/solar_dawn.jpeg
   heading: Solar is reliable for
   subheading: |-
     Find out how we can help you secure reliable power with SOLAR Energy
