--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -135,6 +135,7 @@ collections:
                 [
                   { label: "Heading", name: "heading", widget: "text" },
                   { label: "Subheading", name: "subheading", widget: "text" },
+                  { label: "Body", name: "body", widget: "markdown" },
                   {
                     label: "Features",
                     name: "features",
