Update Landing pages “home”

--- a/src/data/home.yml
+++ b/src/data/home.yml
@@ -53,7 +53,7 @@ section_solar:
         In RSA Tax Law provides under section 12 B of the Income Tax Act for the
         deduction of the total cost of the installation, from Tax liability or
         can be carried over.
-  heading: Solar makes a great investment
+  heading: Solar Power is great investment
   subheading: >-
     Farming, Business parks, University, Colleges, Schools, Hospitals and
     more...
