--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -78,7 +78,7 @@ collections:
       - { label: "Body", name: "body", widget: "markdown" }
   - name: "about" # Used in routes, e.g., /content/sectors
     label: "About" # Used in the UI
-    folder: "content/" # The path to the folder where the documents are stored
+    folder: "content/about" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     extension: "md"
