--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -64,9 +64,26 @@ collections:
             ],
         }
       - { label: "Body", name: "body", widget: "markdown" }
-  - name: "pages"
-    label: "Pages"
-    delete: true # Prevent users from deleting documents in this collection
+  - name: "about" # Used in routes, e.g., /content/sectors
+    label: "About" # Used in the UI
+    folder: "content/about" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    extension: "md"
+    fields: # The fields for each document, usually in front matter
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Date", name: "date", widget: "datetime" }
+      - {
+          label: "Cover Image",
+          name: "cover_image",
+          widget: "image",
+          required: false,
+        }
+      - { label: "Image Alt text", name: "alt", widget: "text" } 
+      - { label: "Body", name: "body", widget: "markdown" }
+  - name: "data"
+    label: "Landing pages"
+    delete: false # Prevent users from deleting documents in this collection
     files:
       - name: "home"
         label: "Home page"
@@ -146,18 +163,4 @@ collections:
                     fields: [{ label: "Logo", name: "logo", widget: "image" }, { label: "Alt text", name: "alt", widget: "text" }],
                   },
                 ],
-            }
-      - name: "about"
-        label: "About page"
-        file: "src/data/about.yml"
-        description: "About page content"
-        fields: # The fields for each document, usually in front matter
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Date", name: "date", widget: "datetime" }
-          - { label: "Body", name: "body", widget: "markdown" }
-          - {
-              label: "Cover Image",
-              name: "cover_image",
-              widget: "image",
-              required: false,
             }
