Add aria-label= to buttons

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: github
+  name: git-gateway
   repo: msully/New-dawn-solar
 media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
 public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
@@ -67,7 +67,7 @@ collections:
   - name: "about" # Used in routes, e.g., /content/sectors
     label: "About" # Used in the UI
     folder: "content/about" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
+    create: false # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     extension: "md"
     fields: # The fields for each document, usually in front matter
