--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -79,7 +79,8 @@ collections:
           widget: "image",
           required: false,
         }
-      - { label: "Image Alt text", name: "alt", widget: "text" } 
+      - { label: "Image Alt text", name: "alt", widget: "text" }
+      - { label: "Description", name: "description", widget: "markdown" } 
       - { label: "Body", name: "body", widget: "markdown" }
   - name: "data"
     label: "Landing pages"
@@ -92,6 +93,7 @@ collections:
         fields: # The fields for each document, usually in front matter
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Date", name: "date", widget: "datetime" }
+          - { label: "Description", name: "description", widget: "markdown" }
           - {
               label: "Section - Banner",
               name: "section_banner",
