--- a/src/data/home.yml
+++ b/src/data/home.yml
@@ -1,5 +1,6 @@
 title: Home
 date: 2020-01-10T10:50:24.504Z
+description: ' New Dawn solar'
 section_banner:
   alt: Sun rising over a solar installation.
   banner_image: /images/uploads/solar_dawn.jpeg
@@ -50,12 +51,14 @@ section_solar:
         expensive, ‘brown’ energy bought from the National Grid.
     - heading: Tax relief
       text: >-
-        In RSA Tax Law provides under section 12 B of the Income Tax Act for the
-        deduction of the total cost of the installation, from Tax liability or
-        can be carried over.
+        Under South African Tax Legislation a Taxpayer who is bringing in a
+        Solar scheme plant and equipment for the first time by that Taxpayer for
+        the purpose of his/ her trade may deduct the full cost against taxable
+        income in the year its incurred. Deemed at 28 % but each client will be
+        advised by his Consultants in this regard. 
   heading: Solar Power is a great investment
   subheading: >-
-    Farming, Business parks, University, Colleges, Schools, Hospitals and
+    Farming, Business parks, Universities, Colleges, Schools, Hospitals and
     more...
 section_how:
   body: >-
