Update Landing pages “home”

--- a/src/data/home.yml
+++ b/src/data/home.yml
@@ -51,11 +51,12 @@ section_solar:
         expensive, ‘brown’ energy bought from the National Grid.
     - heading: Tax relief
       text: >-
-        Under South African Tax Legislation a Taxpayer who is bringing in a
-        Solar scheme plant and equipment for the first time by that Taxpayer for
-        the purpose of his/ her trade may deduct the full cost against taxable
-        income in the year its incurred. Deemed at 28 % but each client will be
-        advised by his Consultants in this regard. 
+        Under SA Tax Legislation a taxpayer installing a solar scheme may claim
+        a tax deduction for the cost of that installation in the year it's
+        installed. This is a specific benefit derived from installing a solar
+        scheme and a client should obtain the advice of a Professional
+        Consultant to determine how best to take advantage of this significant
+        benefit.
   heading: Solar Power is a great investment
   subheading: >-
     Farming, Business parks, Universities, Colleges, Schools, Hospitals and
