--- a/src/data/home.yml
+++ b/src/data/home.yml
@@ -1,15 +1,20 @@
 title: Home
 date: 2020-01-10T10:50:24.504Z
 description: >-
-  Recent events in the World have provided a stark reminder to people everywhere
-  that we depend on this Planet and the Cosmos for our sustenance and well -
-  being . 
+  > Recent events in the World have provided a stark reminder to people
+  everywhere that we depend on this Planet and the Cosmos for our sustenance and
+  well-being. 
+
+  >
+
+  > ***Sales Director:** Harvey Anderson*
 
 
-  We believe the vast majority of people who own a property are now a potential
-  Solar Energy customer primarily perhaps for its Environmental appeal but in
-  South Africa for the other reasons as well in securing Energy independence ,
-  investment potential and cost clarity
+  At **Newdawn Solar**, we believe the vast majority of people who own a
+  property are now a potential **Solar Energy customer** primarily perhaps for
+  its Environmental appeal but in South Africa for the other reasons as well in
+  securing **Energy independence**, **investment** potential and **cost**
+  clarity.
 section_banner:
   alt: Sun rising over a solar installation.
   banner_image: /images/uploads/solar_dawn.jpeg
