Update Landing pages “home”

--- a/src/data/home.yml
+++ b/src/data/home.yml
@@ -7,7 +7,7 @@ description: >-
 
   >
 
-  > ***Sales Director:** Harvey Anderson*
+  > ***Sales Director:** Rennie Anderson*
 
 
   At **Newdawn Solar**, we believe the vast majority of people who own a
