--- a/src/data/home.yml
+++ b/src/data/home.yml
@@ -1,13 +1,12 @@
 title: Home
 date: 2020-01-10T10:50:24.504Z
 description: >-
-  > Recent events in the World have provided a stark reminder to people
-  everywhere that we depend on this Planet and the Cosmos for our sustenance and
+  Recent events in the World have provided a stark reminder to people everywhere
+  that we depend on this Planet and the Cosmos for our sustenance and
   well-being. 
 
-  >
 
-  > ***Sales Director:** Rennie Anderson*
+  **\*Sales Director:** Rennie Anderson*
 
 
   At **Newdawn Solar**, we believe the vast majority of people who own a
