Update Landing pages “home”

--- a/src/data/home.yml
+++ b/src/data/home.yml
@@ -26,6 +26,18 @@ section_banner:
     - Commercial
     - Residential
     - Property Development
+section_quote:
+  author: Rennie Anderson
+  image: /images/uploads/20200504_202058.jpg
+  quote: >-
+    Recent events in the World have provided a stark reminder to people
+    everywhere that we depend on this Planet and the Cosmos for our sustenance
+    and well - being.  
+
+    We believe the vast majority of people who own a property are now a
+    potential Solar Energy customer primarily perhaps for its Environmental
+    appeal but in South Africa for the other reasons as well in securing Energy
+    independence, investment potential and cost clarity 
 section_solar:
   body: >-
     Without the sun, life as we know would not exist. The light and heat
