Update Landing pages “home”

--- a/src/data/home.yml
+++ b/src/data/home.yml
@@ -1,19 +1,6 @@
 title: Home
 date: 2020-01-10T10:50:24.504Z
-description: >-
-  Recent events in the World have provided a stark reminder to people everywhere
-  that we depend on this Planet and the Cosmos for our sustenance and
-  well-being. 
-
-
-  **\*Sales Director:** Rennie Anderson*
-
-
-  At **Newdawn Solar**, we believe the vast majority of people who own a
-  property are now a potential **Solar Energy customer** primarily perhaps for
-  its Environmental appeal but in South Africa for the other reasons as well in
-  securing **Energy independence**, **investment** potential and **cost**
-  clarity.
+description: New dawn solar
 section_banner:
   alt: Sun rising over a solar installation.
   banner_image: /images/uploads/solar_dawn.jpeg
@@ -28,16 +15,18 @@ section_banner:
     - Property Development
 section_quote:
   author: Rennie Anderson
-  image: /images/uploads/20200504_202058.jpg
+  image: /images/uploads/Rennie_Anderson.png
   quote: >-
     Recent events in the World have provided a stark reminder to people
     everywhere that we depend on this Planet and the Cosmos for our sustenance
     and well - being.  
 
+
     We believe the vast majority of people who own a property are now a
     potential Solar Energy customer primarily perhaps for its Environmental
     appeal but in South Africa for the other reasons as well in securing Energy
     independence, investment potential and cost clarity 
+  title: Go Green
 section_solar:
   body: >-
     Without the sun, life as we know would not exist. The light and heat
