Update Landing pages “home”

--- a/src/data/home.yml
+++ b/src/data/home.yml
@@ -25,7 +25,7 @@ section_quote:
     We believe the vast majority of people who own a property are now a
     potential Solar Energy customer primarily perhaps for its Environmental
     appeal but in South Africa for the other reasons as well in securing Energy
-    independence, investment potential and cost clarity 
+    independence, investment potential and cost clarity.
   title: Go Green
 section_solar:
   body: >-
