--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "build": "gridsome build",
     "develop": "gridsome develop",
-    "explore": "gridsome explore"
+    "explore": "gridsome explore",
+    "twdev": "NODE_ENV=development tailwindcss --jit -i ./css/src/main.css -o ./css/main.css  -w",
+    "twprod": "NODE_ENV=production npx tailwindcss -i ./css/src/main.css -o ./css/main.css "
   },
   "dependencies": {
     "@gridsome/plugin-google-analytics": "^0.1.1",
@@ -12,14 +14,19 @@
     "@gridsome/remark-prismjs": "^0.3.0",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.2",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.2",
     "cookieconsent": "3",
     "gridsome": "^0.7.20",
     "gridsome-plugin-netlify-cms": "^1.0.9",
     "netlify-cms": "^2.10.56",
-    "tailwindcss": "^1.8.5",
+    "tailwindcss": "^3.0.23",
     "vue-typer": "^1.2.0"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^1.3.0"
+    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.8"
   }
 }
