--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "build": "gridsome build",
     "develop": "gridsome develop",
     "explore": "gridsome explore",
-    "twdev": "NODE_ENV=development tailwindcss --jit -i ./css/src/main.css -o ./css/main.css  -w",
-    "twprod": "NODE_ENV=production npx tailwindcss -i ./css/src/main.css -o ./css/main.css "
+    "twdev": "NODE_ENV=development tailwindcss --jit -i ./src/css/src/main.css -o ./src/css/main.css  -w",
+    "twprod": "NODE_ENV=production npx tailwindcss -i ./src/css/src/main.css -o ./src/css/main.css "
   },
   "dependencies": {
     "@gridsome/plugin-google-analytics": "^0.1.1",
