--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.8"
-  }
+  },
+  "packageManager": "yarn@3.2.0"
 }
