Add Image gallery list

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -20,35 +20,12 @@ collections:
           required: false,
         }
       - { label: "Description", name: "description", widget: "markdown" }
-      - {
-          label: "Image gallery",
-          name: "image_gallery",
-          widget: "object",
-          fields:
-            [
-              {
-                label: "Heading",
-                name: "heading",
-                default: "Image gallery",
-                widget: "string",
-              },
-              { label: "Subheading", name: "subheading", widget: "text" },
-              {
-                label: "Image",
-                name: "image",
-                widget: "list",
-                fields:
-                  [
-                    {
-                      label: "Image",
-                      name: "image",
-                      widget: "image",
-                      required: false,
-                    }
-                  ],
-              },
-            ],
-        }
+      - label: "Gallery"
+        name: "galleryImages"
+        widget: "list"
+        fields:
+          - { label: "Source", name: "src", widget: "string" }
+          - { label: "Alt Text", name: "alt", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
   - name: "sectors" # Used in routes, e.g., /content/sectors
     label: "Sector" # Used in the UI
