Add Image gallery list

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -24,7 +24,7 @@ collections:
         name: "galleryImages"
         widget: "list"
         fields:
-          - { label: "Source", name: "src", widget: "string" }
+          - { label: Image, name: image, widget: image }
           - { label: "Alt Text", name: "alt", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
   - name: "sectors" # Used in routes, e.g., /content/sectors
