--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@gridsome/plugin-google-analytics": "^0.1.2",
-    "@gridsome-plugin-gtm: "^0.1.1",
+    "@gridsome-plugin-gtm": "^0.1.1",
     "@gridsome/plugin-sitemap": "^0.4.0",
     "@gridsome/remark-prismjs": "^0.5.0",
     "@gridsome/source-filesystem": "^0.6.2",
